--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -2,6 +2,9 @@
 
 {% block title %} Home {% endblock title %}
 {% block homeactive %} active {% endblock homeactive %}
+{% block js %}
+<script src="https://kit.fontawesome.com/06db8242e4.js" crossorigin="anonymous"></script>
+{% endblock js %}
 {% block body %}
 {% load static %}
 <link rel='stylesheet' href="{% static 'css/index.css' %}">
@@ -22,20 +25,21 @@
 </div>
 
 <div class="container">
-    <h2>Popular blogposts:</h2>
-    <div class="row no-gutters border rounded overflow-hidden flex-md-row my-4 shadow-sm h-md-250 position-relative">
-        <div class="col p-4 d-flex flex-column position-static">
-            <strong class="d-inline-block mb-2 text-primary">World</strong>
-            <h3 class="mb-0">Featured post</h3>
-            <div class="mb-1 text-muted">Nov 12</div>
-            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to
-                additional content.</p>
-            <a href="#" class="stretched-link">Continue reading</a>
-        </div>
-        <div class="col-auto d-none d-lg-block">
-
-        </div>
-    </div> 
+  {% for post in allPosts %}
+    <div class="card mb-3">
+      <div class="card-body">
+        <h5 class="card-title">{{post.title}}
+          (<i class="fas fa-eye"></i> {{post.views}})</h5>
+        <p class="card-text">{{post.content|safe| truncatechars:250}}</p>
+        <p class="card-text"><small class="text-muted">Last update {{post.timeStamp}}</small></p>
+      <div>
+      <a href="/blog/{{post.slug}}" role = "button" class="btn btn-primary">Read more</a>
+      </div>
+      </div>
+   </div>
+   {% endfor %}
+</div>
+</div>
 </div>
 </div>
 {% endblock body %}
