--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -16,7 +16,8 @@
 
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/static/img/blog2.jpg" class="d-block" alt="img is loading....">
+      <img src="https://cdn.pixabay.com/photo/2012/05/07/18/57/blog-49006_640.png" class="d-block" style="height: 300px;
+    width: 100%;" alt="img is loading....">
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
