--- a/templates/base.html
+++ b/templates/base.html
@@ -13,8 +13,9 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">iCoder</a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> 
+    <div class="container-fluid">
+    <a class="navbar-brand" href="/">ANCoder</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
