--- a/templates/home/sinup.html
+++ b/templates/home/sinup.html
@@ -1,50 +1,216 @@
-{% extends 'base.html' %}
-{% block title %} Sinup {% endblock title %}
+{% extends 'base.html'%}
 {% block body %}
 {% load static %}
-<!-- Favicon icon -->
-<link href= "https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css">
-<script src="https://www.google.com/recaptcha/api.js" async defer></script>
-<link rel='stylesheet' href="{% static 'css/login.css' %}">
-<div class="d-flex justify-content-center align-items-center mt-5">
-    <div class="card">
-        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-            <li class="nav-item text-center">
-                <a class="nav-link active btl" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Sin up</a>
-            </li>
-        </ul>
-        <form method="post" action="/sinup">
-            {% csrf_token %}
-                <div class="form px-4">
-                    <input type="text" name="name" id="name" class="form-control" placeholder="Name" required>
-                    <input type="email" name="email" id = "email" class="form-control" placeholder="email" required>
-                    <input type="text" name="username" id="username" class="form-control" placeholder="userName" required>
-                    <input type="text" name="phone" id = "phone" class="form-control" placeholder="Phone" required>
-                    <input type="password" name="password" id = "password" class="form-control" placeholder="Password" required>
-                    <div class="g-recaptcha" data-sitekey="6Lf6H20aAAAAAGO3CE6pzySrgrltBeaaZ6nkQNpo"></div>
 
-                    <button class="btn btn-dark btn-block">Signup</button>
-                </div>
-        </form>
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+<script src="https://kit.fontawesome.com/06db8242e4.js" crossorigin="anonymous"></script>
+<br>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-3 col-md-2"></div>
+        <div class="col-lg-6 col-md-8 login-box">
+            <div class="col-lg-12 login-key">
+                <i class="fas fa-user-plus"aria-hidden="true"></i>
             </div>
+            <div class="col-lg-12 login-title">
+                Sinup Pannel
+            </div>
+            <div class="col-lg-12 login-form">
+                <div class="col-lg-12 login-form">
+                    <form method="post" id="myform">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <label class="form-control-label"> Name</label>
+                            <input type="text" name="name" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label class="form-control-label"> Username</label>
+                            <input type="text" name="username" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label class="form-control-label"> Phone number</label>
+                            <input type="number" name="phone" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label class="form-control-label"> Email</label>
+                            <input type="email" name="email"  class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label class="form-control-label"> Password</label>
+                            <input type="password" name="password"  class="form-control" required>
+                        </div>
+                        <div class="g-recaptcha" data-sitekey="6Lf6H20aAAAAAGO3CE6pzySrgrltBeaaZ6nkQNpo"></div>
+                        <br>
+
+                        <div class="col-lg-12 loginbttm">
+                            <div class="col-lg-6 login-btm login-text">
+                                
+                            </div>
+                            <div class="col-lg-6 login-btm login-button">
+                                <button type="submit" class="btn btn-outline-primary" name="sinup">SIGNUP</button>
+                            </div>
+                            
+                        </div>
+                    </form>
+                    <div class="col-lg-6 login-btm login-button">
+                        Forgot Password? <a href="/login" class="text-danger">Login Here</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-2"></div>
         </div>
     </div>
 </div>
 <style>
-    @media screen and (max-width: 400px){
-        .card{
-            width: 250px;
-            height: 418px;
-        }
-        #rc-imageselect, .g-recaptcha {
-            transform:scale(0.70);
-            -webkit-transform:scale(0.70);
-            transform-origin:0 0;
-            -webkit-transform-origin:0 0;
-       }
-    }
-</style>
-{% endblock body %}
-<!--
+body {
+    background: black;
+    font-family: 'Roboto', sans-serif;
+}
 
--->
+.login-box {
+    margin-top: 75px;
+    height: auto;
+    background: #1A2226;
+    text-align: center;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.login-key {
+    height: 100px;
+    font-size: 80px;
+    line-height: 100px;
+    background: -webkit-linear-gradient(#27EF9F, #0DB8DE);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.login-title {
+    margin-top: 15px;
+    text-align: center;
+    font-size: 30px;
+    letter-spacing: 2px;
+    margin-top: 15px;
+    font-weight: bold;
+    color: #ECF0F5;
+}
+
+.login-form {
+    margin-top: 25px;
+    text-align: left;
+}
+
+input[type=text] {
+    background-color: #1A2226;
+    border: none;
+    border-bottom: 2px solid #0DB8DE;
+    border-top: 0px;
+    border-radius: 0px;
+    font-weight: bold;
+    outline: 0;
+    margin-bottom: 20px;
+    padding-left: 0px;
+    color: #ECF0F5;
+}
+
+input[type=password] {
+    background-color: #1A2226;
+    border: none;
+    border-bottom: 2px solid #0DB8DE;
+    border-top: 0px;
+    border-radius: 0px;
+    font-weight: bold;
+    outline: 0;
+    padding-left: 0px;
+    margin-bottom: 20px;
+    color: #ECF0F5;
+}
+input[type=number] {
+    background-color: #1A2226;
+    border: none;
+    border-bottom: 2px solid #0DB8DE;
+    border-top: 0px;
+    border-radius: 0px;
+    font-weight: bold;
+    outline: 0;
+    padding-left: 0px;
+    margin-bottom: 20px;
+    color: #ECF0F5;
+}
+input[type=email] {
+    background-color: #1A2226;
+    border: none;
+    border-bottom: 2px solid #0DB8DE;
+    border-top: 0px;
+    border-radius: 0px;
+    font-weight: bold;
+    outline: 0;
+    padding-left: 0px;
+    margin-bottom: 20px;
+    color: #ECF0F5;
+}
+
+.form-group {
+    margin-bottom: 40px;
+    outline: 0px;
+}
+
+.form-control:focus {
+    border-color: inherit;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    border-bottom: 2px solid #0DB8DE;
+    outline: 0;
+    background-color: #1A2226;
+    color: #ECF0F5;
+}
+
+input:focus {
+    outline: none;
+    box-shadow: 0 0 0;
+}
+
+label {
+    margin-bottom: 0px;
+}
+
+.form-control-label {
+    font-size: 10px;
+    color: #6C6C6C;
+    font-weight: bold;
+    letter-spacing: 1px;
+}
+
+.btn-outline-primary {
+    border-color: #0DB8DE;
+    color: #0DB8DE;
+    border-radius: 0px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+.btn-outline-primary:hover {
+    background-color: #0DB8DE;
+    right: 0px;
+}
+
+.login-btm {
+    float: left;
+}
+
+.login-button {
+    padding-right: 0px;
+    text-align: right;
+    margin-bottom: 25px;
+}
+.login-text {
+    text-align: left;
+    padding-left: 0px;
+    color: #A2A4A4;
+}
+
+.loginbttm {
+    padding: 0px;
+}
+</style>
+{% endblock%}
