--- a/templates/home/login.html
+++ b/templates/home/login.html
@@ -47,10 +47,10 @@
                 <div class="col-lg-3 col-md-2"></div>
             </div>
         </div>
-
+</diV>
 <style>
 body {
-    background: black;
+    background: white;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -87,7 +87,7 @@ body {
 }
 
 input[type=text] {
-    background-color: #1A2226;
+    background-color: #1A2226; !important
     border: none;
     border-bottom: 2px solid #0DB8DE;
     border-top: 0px;
@@ -99,7 +99,7 @@ input[type=text] {
     color: #ECF0F5;
 }
 input[type=email] {
-    background-color: #1A2226;
+    background-color: #1A2226; 
     border: none;
     border-bottom: 2px solid #0DB8DE;
     border-top: 0px;
