--- a/templates/base.html
+++ b/templates/base.html
@@ -23,9 +23,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item {% block homeactive %} {% endblock homeactive %}">
-          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/">Home </a>
         </li>
-        <li class="nav-item {% block aboutactive %} {% endblock aboutactive %}">
+        <li class="nav-item {% block write_blog_active %} {% endblock write_blog_active %}">
           <a class="nav-link" href="/tiny">Write a blog</a>
         </li>
         <li class="nav-item {% block blogactive %} {% endblock blogactive %}">
@@ -74,23 +74,25 @@
   {% endfor %}
 
   {% block body %}
+
   {% endblock body %}
   {% block js %}
 
   {% endblock js %}
   {%  block footer %}
-    <footer class="bg-light text-center text-lg-start">
+    <footer class="bg-light text-center text-lg-start" style="margin-top:20%;" >
     <!-- Copyright -->
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0);">
 
-      <a class="text-white" href="https:/Easy.com/" style="text-decoration:none;"> © 2021 Copyright ANCoder.com</a>
+      <a class="text-white" href="/" style="text-decoration:none;"> © 2021 Copyright ANCoder.com</a>
       </div>
     <!-- Copyright -->
     </footer>
   {% endblock footer %}
   <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS   <span class="sr-only">(current)</span> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
