--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -7,40 +7,38 @@
 {% endblock js %}
 {% block body %}
 {% load static %}
-<link rel='stylesheet' href="{% static 'css/index.css' %}">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
 <div class="container my-4">
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="https://cdn.pixabay.com/photo/2012/05/07/18/57/blog-49006_640.png" class="d-block" style="height: 300px;
-    width: 100%;" alt="img is loading....">
-      <div class="carousel-caption d-none d-md-block">
-      </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://cdn.pixabay.com/photo/2012/05/07/18/57/blog-49006_640.png" class="d-block" style="height: 300px;
+        width: 100%;" alt="img is loading....">
+        <div class="carousel-caption d-none d-md-block"> </div>
+      </div> 
     </div>
+  </div>
+</div>
 
-</div>
-</div>
-
-<div class="container">
-  {% for post in allPosts %}
-    <div class="card mb-3">
-      <div class="card-body">
-        <h5 class="card-title">{{post.title}}
-          (<i class="fas fa-eye"></i> {{post.views}})</h5>
-        <p class="card-text">{{post.content|safe| truncatechars:250}}</p>
-        <p class="card-text"><small class="text-muted">Last update {{post.timeStamp}}</small></p>
-      <div>
-      <a href="/blog/{{post.slug}}" role = "button" class="btn btn-primary">Read more</a>
+<div class="wrapper">
+  <div class="container">
+    {% for post in allPosts %}
+      <div class="card text-center my-5 mx-5">
+        <h3 class="card-header">
+          {{post.title}}
+        </h3>
+        <div class="card-body">
+          <h5 class="card-title">(<i class="fas fa-eye"></i> {{post.views}})</h5>
+          <p class="card-text">{{post.content|safe| truncatechars:50}}</p>
+          <a href="/blog/{{post.slug}}" class="btn btn-success">Read more</a>
+        </div>
+        <div class="card-footer text-muted">
+          Last update {{post.timeStamp}}
+        </div>
       </div>
-      </div>
-   </div>
-   {% endfor %}
-</div>
-</div>
-</div>
-</div>
+    {% endfor %}
+  </div>
+<div>
 {% endblock body %}
