--- a/templates/home/search.html
+++ b/templates/home/search.html
@@ -1,9 +1,18 @@
 {% extends 'base.html' %}
 
 {% block title %} Search Results {% endblock title %}
-
 {% block blogactive %} active {% endblock blogactive %}
+{% block js %}
+<script>
+    let previews=document.getElementsByClassName('preview');
+    Array.from(previews).forEach((element))=>{
+        element.innerHTML=element.innerText;
+    })
+</script>
+
+{% endblock js %}
 {% block body %} 
+
 <div class="container my-3">
     <h2>Search results:</h2>
     {% if allPosts|length < 1 %}
@@ -25,7 +34,7 @@
             <strong class="d-inline-block mb-2 text-primary">Article by {{post.author}}</strong>
             <h3 class="mb-0">{{post.title}}</h3>
             <div class="mb-1 text-muted">{{post.datetime}}</div>
-            <p class="card-text mb-auto">{{post.content| truncatechars:500 }}</p>
+            <p class="card-text mb-auto">{{post.content|safe| truncatechars:50}}</p>
             <div class="my-2">
             <a href="/blog/{{post.slug}}" role="button" class="btn btn-primary">Continue reading</a>
             </div>
@@ -37,5 +46,6 @@
 
 
     {% endfor %}
+</div>
 </div>
 {% endblock body %}
