--- a/templates/home/tiny.html
+++ b/templates/home/tiny.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %} Home {% endblock title %}
-{% block homeactive %} active {% endblock homeactive %}
+{% block write_blog_active %} active {% endblock write_blog_active %}
 {% block js%}
     <script src="https://cdn.tiny.cloud/1/zpi5wbuec39zkibohgbrgftt3xp7sk86qrfy74d29bx9gp6m/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
       <style>
