--- a/templates/home/sinup.html
+++ b/templates/home/sinup.html
@@ -29,7 +29,7 @@
                         </div>
                         <div class="form-group">
                             <label class="form-control-label"> Phone number</label>
-                            <input type="number" name="phone" class="form-control" required>
+                            <input type="number" name="phone" class="form-control" required autocomplete="off">
                         </div>
                         <div class="form-group">
                             <label class="form-control-label"> Email</label>
