--- a/templates/blog/blogHome.html
+++ b/templates/blog/blogHome.html
@@ -13,6 +13,7 @@
 {% block blogactive %} active {% endblock blogactive %}
 {% block body %}
 {% load static %}
+ {% static 'img' as baseurl %} 
 <link rel='stylesheet' href="{% static 'css/index.css' %}">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -26,18 +27,18 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/static/img/start_blog.jpg" class="d-block" alt="img is loading....">
+      <img src="/static/img/start_blog.jpg" class="d-block" alt="img is loading...." style="height: 300px; width:100%">
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/static/img/food3.jpg" class="d-block" alt="img is loading...">
+      <img src="/static/img/food3.jpg" class="d-block" alt="img is loading..." style="height: 300px; width:100%">
       <div class="carousel-caption d-none d-md-block">
 
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/static/img/food_blog.jpg" class="d-block" alt="img is loading...">
+      <img src="/static/img/food_blog.jpg" class="d-block" alt="img is loading..." style="height: 300px; width:100%">
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
@@ -53,69 +54,26 @@
 </div>
 </div>
 <div class = "wrapper">
-  <div class="container">
+   <div class="container">
       <div class="row">
           {% for post in allPosts %}
-          <div class="col-md-6 col-lg-4">
+           <div class="col-md-6 col-lg-4">
               <div class="card mx-50" >
-                <!--<img src="{{post.tumbnail}}" class="card-img-top" alt="image"> -->
+                <img src="../{{post.tumbnail}}" class="card-img-top" alt="image" style="height:250px"> 
                   <div class="card-body">
                     <h5 class="card-title">{{post.title}} (<i class="fas fa-eye"></i> {{post.views}})</h5>
-                    <p class="card-text">{{post.content|safe| truncatechars:50}}</p>
-                    <a href="/blog/{{post.slug}}" role = "button" target="_blank" class="btn btn-primary">Read more</a>
+                   
+                    <a href="/blog/{{post.slug}}" role = "button" target="_blank" class= "btn btn-primary">Read more</a>
                   </div>
               </div>
-          </div>
+            </div>
           {% endfor %}
+          <br>
       </div>
-    <br>
+    </div>
   </div>
 </div>
 
-</div>
-</div>
-<style>
-
-  
-</style>
 {% endblock body %}
 
-<!--
 
-<div class = "wrapper">
-<div class="container">
-  {% for post in allPosts %}
-    <div class="card mb-3">
-      <div class="card-body">
-        <h5 class="card-title">{{post.title}}
-          (<i class="fas fa-eye"></i> {{post.views}})</h5>
-        <p class="card-text">{{post.content|safe| truncatechars:250}}</p>
-        <p class="card-text"><small class="text-muted">Last update {{post.timeStamp}}</small></p>
-      <div>
-      <a href="/blog/{{post.slug}}" role = "button" target="_blank" class="btn btn-primary">Read more</a>
-      </div>
-      </div>
-   </div>
-   {% endfor %}
-</div>
-</div>
-
-
-<div class = "wrapper">
-<div class="container">
-  {% for post in allPosts %}
-    <div class="card mb-3">
-      <div class="card-body">
-        <h5 class="card-title">{{post.title}}
-          (<i class="fas fa-eye"></i> {{post.views}})</h5>
-        <p class="card-text">{{post.content|safe| truncatechars:250}}</p>
-        <p class="card-text"><small class="text-muted">Last update {{post.timeStamp}}</small></p>
-      <div>
-      <a href="/blog/{{post.slug}}" role = "button" class="btn btn-primary">Read more</a>
-      </div>
-      </div>
-   </div>
-   {% endfor %}
-</div>
-</div>
--->
