--- a/templates/home/tiny.html
+++ b/templates/home/tiny.html
@@ -36,10 +36,14 @@
     <form method="post" action="/tiny">
       {% csrf_token %}
       <textarea id="mytextarea" name="content"></textarea>
-
-      <div class="form-group">
+    <div class="form-group">
       <label for="title">Title</label>
       <input type="text" class="form-control" id="title" name="title" aria-describedby="title">
+    </div>
+    <div class="form-group">
+      <label for="tumbnail">Thumbnail</label>
+      <input type="file" name="tumbnail" value="fileupload" id="tumbnail">
+      <br><input type="image" src="" width="100">
     </div>
     <div class="form-group">
       <label for="author">Author</label>
@@ -58,15 +62,3 @@
   </div>
 {% endblock body %}
 
-<!--
-<script>
-    tinymce.init({
-      selector: 'textarea',
-      plugins: 'a11ychecker advcode casechange formatpainter linkchecker autolink lists checklist media mediaembed pageembed permanentpen powerpaste table advtable tinycomments tinymcespellchecker',
-      toolbar: 'a11ycheck addcomment showcomments casechange checklist code formatpainter pageembed permanentpen table',
-      toolbar_mode: 'floating',
-      tinycomments_mode: 'embedded',
-      tinycomments_author: 'Author name',
-   });
-  </script>
--->
