--- a/templates/blog/blogPost.html
+++ b/templates/blog/blogPost.html
@@ -42,7 +42,7 @@
        {% for comment in comments %}
        <div class = "row my-3">
         <div class = "col-md-1">
-        <img class = "rounded mx-auto d-block w-100 p-2" src = "/static/img/user.jfif" alt = "user">
+        <img class = "rounded mx-auto d-block w-100 p-2" src = "/static/img/user.jpg" alt = "user">
         </div>
         <div class = "col-md-11">
         <b>{{comment.user.username}}</b> <span class = "badge bg-secondary">{{comment.timestamp| naturaltime}}</span>
